# auth-server

./: .dockerignore  .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  MSAL_INTEGRATION.md  OIDC_UPGRADE.md  README.md  compose-dev.yml  dev.yml  docker-compose-dev.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: docker-image-arm64.yml  docker-image-dev.yml  docker-image-prod.yml  docker-image.yml  tests.yml
auth_server/: __init__.py  auth.py  config.py  constants.py  crud.py  database.py  main.py  models.py  schema.py  schemas.py  types.py  utils.py
auth_server/backends/: __init__.py  github.py  google.py  ldap.py  oidc.py
auth_server/cli/: auth_user.py  cli.py  create_db.py  create_token.py  create_user.py  ldap.py  list_users.py  set_password.py  tokens.py  users.py
auth_server/commands/: create_db.py  create_user.py
auth_server/database/: __init__.py  engine.py  groups.py  models.py  perms.py  session.py
auth_server/db/: __init__.py  api.py  engine.py  groups.py  models.py  orm.py  perms.py  users.py
docker/: Dockerfile  README.md  entrypoint.sh  nginx.conf  run.bash  supervisord.conf
docker/dev/: Dockerfile  nginx.conf  supervisord.conf
etc/: logging.yml
examples/: oidc_example.py
tests/: conftest.py  test_auth.py  test_user.py  test_utils.py  test_views.py
ui/: package-lock.json  package.json
ui/public/: index.html  runtime-env.js
ui/src/: App.scss  App.tsx  constants.ts  index.scss  index.tsx  runtime_config.ts  types.ts  utils.ts
ui/src/components/: separator.tsx
ui/src/components/login/: button.tsx  error.tsx  input.tsx  login.tsx  logo.tsx  types.ts
ui/src/components/oidc_login/: oidc_callback.tsx  oidc_login.tsx
ui/src/components/social_login/: callback.tsx  github_callback.tsx  google_callback.tsx  oauth_popup.tsx  social_login.tsx
ui/src/hooks/: use_oauth.ts  use_oidc.ts
ui/src/pages/: _app.tsx  index.tsx
ui/src/styles/: globals.css
ui2/: .nvmrc  README.md  index.html  package.json  papermerge-runtime-config.js
ui2/public/: papermerge-runtime-config.js
ui2/public/localization/de/: _default.json
ui2/public/localization/en/: _default.json
ui2/src/: App.css  App.tsx  Router.tsx  RuntimeConfig.ts  initializeI18n.ts  main.tsx  types.ts
ui2/src/components/DBLogin/: DBLogin.tsx
ui2/src/components/Logo/: Logo.tsx
ui2/src/pages/: Login.module.css  Login.page.tsx
