[tool.poetry]
name = "auth-server"
version = "0.4.0"
description = ""
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"
packages = [{include = "auth_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.9"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
httpx = "^0.24.1"
rich = "^13.3.5"
click = "^8.1.3"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
create_user='auth_server.cli.create_user:cli'
auth_user='auth_server.cli.auth_user:cli'
list_users='auth_server.cli.list_users:cli'
create_db='auth_server.cli.create_db:cli'
set_password='auth_server.cli.set_password:cli'

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-env = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
