[tool.poetry]
name = "auth-server"
version = "1.1.3"
description = "Papermerge auth server"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"
packages = [{include = "auth_server"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115"}
sqlalchemy = "^2.0.9"
passlib = "^1.7.4"
python-multipart = "^0.0.17"
httpx = "^0.27"
rich = "^13.3.5"
pyyaml = "^6.0.1"
pydantic-settings = "^2.6"
ldap3 = "^2.9.1"
typer = "^0.13.0"
psycopg2 = { version = "^2.9", optional = true}
mysqlclient = {version = "^2.2", optional = true}
pyjwt = "^2.9.0"
authlib = "^1.3.1"

[tool.poetry.extras]
pg = ["psycopg2"]
mysql = ["mysqlclient"]

[tool.poetry.scripts]
auth-cli='auth_server.cli.cli:app'
create_db='auth_server.cli.create_db:cli'
ldap='auth_server.cli.ldap:app'

[tool.taskipy.tasks]
server = "fastapi dev auth_server/main.py --port 4010"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-env = "^0.8.1"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
