[project]
name = "auth-server"
version = "1.1.5"
description = "Papermerge auth server"
authors = [
    {name = "Eugen Ciur", email = "eugen@papermerge.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121",
    "sqlalchemy>=2.0.44",
    "passlib>=1.7.4",
    "python-multipart>=0.0.20",
    "rich>=14.2.0",
    "httpx>=0.28",
    "pyyaml>=6.0.3",
    "pydantic-settings>=2.11",
    "typer>=0.20.0",
    "pyjwt>=2.9.0",
    "psycopg2-binary"
]

[project.scripts]
auth-cli = "auth_server.cli.cli:app"
create_db = "auth_server.cli.create_db:cli"

[dependency-groups]
dev = [
    "taskipy>=1.14",
    "pytest>=9.0.0",
    "pytest-env>=1.2.0",
]

[tool.taskipy.tasks]
server = "fastapi dev auth_server/main.py --port 4010"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auth_server"]
